@@ -1,8 +1,8 @@
 package com.salesmanager.test.shop.common;
 
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertThat;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.springframework.http.HttpStatus.CREATED;
 import static org.springframework.http.HttpStatus.OK;
 
@@ -11,7 +11,6 @@ import java.nio.charset.Charset;
 import java.util.ArrayList;
 import java.util.List;
 
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.context.SpringBootTest.WebEnvironment;
@@ -21,7 +20,6 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 import com.salesmanager.core.business.constants.Constants;
 import com.salesmanager.shop.application.ShopApplication;
@@ -45,7 +43,6 @@ import com.salesmanager.shop.store.security.AuthenticationRequest;
 import com.salesmanager.shop.store.security.AuthenticationResponse;
 
 @SpringBootTest(classes = ShopApplication.class, webEnvironment = WebEnvironment.RANDOM_PORT)
-@ExtendWith(SpringExtension.class)
 public class ServicesTestSupport {
 
 	@Autowired
@@ -66,7 +63,7 @@ public class ServicesTestSupport {
 
 	public ReadableMerchantStore fetchStore() {
 		final HttpEntity<String> httpEntity = new HttpEntity<>(getHeader());
-		return testRestTemplate.exchange(String.format("/api/v1/store/%s", Constants.DEFAULT_STORE), HttpMethod.GET,
+		return testRestTemplate.exchange("/api/v1/store/%s".formatted(Constants.DEFAULT_STORE), HttpMethod.GET,
 				httpEntity, ReadableMerchantStore.class).getBody();
 
 	}
@@ -245,7 +242,7 @@ public class ServicesTestSupport {
 
 		final HttpEntity<PersistableShoppingCartItem> cartEntity = new HttpEntity<>(cartItem, getHeader());
 		final ResponseEntity<ReadableShoppingCart> response = testRestTemplate
-				.postForEntity(String.format("/api/v1/cart/"), cartEntity, ReadableShoppingCart.class);
+				.postForEntity("/api/v1/cart/".formatted(), cartEntity, ReadableShoppingCart.class);
 
 		assertNotNull(response);
 		assertThat(response.getStatusCode(), is(CREATED));
