@@ -1,18 +1,16 @@
 package com.salesmanager.test.shop.integration.tax;
 
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.math.BigDecimal;
 
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.context.SpringBootTest.WebEnvironment;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.ResponseEntity;
-import org.springframework.test.context.junit4.SpringRunner;
 
 import com.salesmanager.shop.application.ShopApplication;
 import com.salesmanager.shop.model.entity.Entity;
@@ -23,7 +21,6 @@ import com.salesmanager.shop.model.tax.TaxRateDescription;
 import com.salesmanager.test.shop.common.ServicesTestSupport;
 
 @SpringBootTest(classes = ShopApplication.class, webEnvironment = WebEnvironment.RANDOM_PORT)
-@RunWith(SpringRunner.class)
 public class TaxRateIntegrationTest extends ServicesTestSupport {
 	
 	
@@ -36,7 +33,7 @@ public class TaxRateIntegrationTest extends ServicesTestSupport {
     	taxClass.setName("Test tax class");
     	
         final HttpEntity<PersistableTaxClass> taxClassEntity = new HttpEntity<>(taxClass, getHeader());
-        final ResponseEntity<Entity> response = testRestTemplate.postForEntity(String.format("/api/v1/private/tax/class/"), taxClassEntity, Entity.class);
+        final ResponseEntity<Entity> response = testRestTemplate.postForEntity("/api/v1/private/tax/class/".formatted(), taxClassEntity, Entity.class);
         
         Entity e = response.getBody();
         
@@ -47,7 +44,7 @@ public class TaxRateIntegrationTest extends ServicesTestSupport {
         final HttpEntity<String> httpEntity = new HttpEntity<>(getHeader());
         
         //tax class exists
-        final ResponseEntity<EntityExists> exists = testRestTemplate.exchange(String.format("/api/v1/private/tax/class/unique?code=" + taxClass.getCode()), HttpMethod.GET,
+        final ResponseEntity<EntityExists> exists = testRestTemplate.exchange(("/api/v1/private/tax/class/unique?code=" + taxClass.getCode()).formatted(), HttpMethod.GET,
                 httpEntity, EntityExists.class);
 
         assertTrue(exists.getBody().isExists());
@@ -93,7 +90,7 @@ public class TaxRateIntegrationTest extends ServicesTestSupport {
 
     	
         final HttpEntity<PersistableTaxRate> taxClassEntity = new HttpEntity<>(taxRate, getHeader());
-        final ResponseEntity<Entity> response = testRestTemplate.postForEntity(String.format("/api/v1/private/tax/rate/"), taxClassEntity, Entity.class);
+        final ResponseEntity<Entity> response = testRestTemplate.postForEntity("/api/v1/private/tax/rate/".formatted(), taxClassEntity, Entity.class);
         
         Entity e = response.getBody();
         
@@ -104,7 +101,7 @@ public class TaxRateIntegrationTest extends ServicesTestSupport {
         final HttpEntity<String> httpEntity = new HttpEntity<>(getHeader());
         
         //tax class exists
-        final ResponseEntity<EntityExists> exists = testRestTemplate.exchange(String.format("/api/v1/private/tax/rate/unique?code=" + taxRate.getCode()), HttpMethod.GET,
+        final ResponseEntity<EntityExists> exists = testRestTemplate.exchange(("/api/v1/private/tax/rate/unique?code=" + taxRate.getCode()).formatted(), HttpMethod.GET,
                 httpEntity, EntityExists.class);
 
         assertTrue(exists.getBody().isExists());
